[gd_scene load_steps=13 format=2]

[ext_resource path="res://static/player.png" type="Texture" id=1]
[ext_resource path="res://src/player/Player.gd" type="Script" id=2]
[ext_resource path="res://static/audio/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://static/audio/bird.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 5.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.5, 5.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 8 )

[sub_resource type="Animation" id=4]
resource_name = "Fall"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Jump"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Run"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_mask = 2
script = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
current = true
process_mode = 0
limit_left = 160
limit_top = -90
limit_right = 0
limit_bottom = 0
smoothing_speed = 10.0
drag_margin_left = 0.4
drag_margin_top = 1.0
drag_margin_right = 0.4
drag_margin_bottom = 1.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, -16 )
texture = ExtResource( 1 )
hframes = 18

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5.5 )
shape = SubResource( 1 )

[node name="VariableJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ForceMoveXTimer" type="Timer" parent="."]
wait_time = 0.16
one_shot = true

[node name="JetpackTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="BounceVarJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="LandedAudioTimer" type="Timer" parent="."]
wait_time = 0.16
one_shot = true

[node name="RoomDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 64

[node name="Collider" type="CollisionShape2D" parent="RoomDetector"]
position = Vector2( 0, -5.5 )
shape = SubResource( 2 )

[node name="BirdDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="BirdDetector"]
position = Vector2( 0, -5 )
shape = SubResource( 3 )

[node name="JumpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="BirdAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="ParticlesSpawn" type="Position2D" parent="."]
position = Vector2( -4, -1.5 )

[node name="ParticlesWallSpawn" type="Position2D" parent="."]
position = Vector2( -6, -4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Fall = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Jump = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/Run = SubResource( 8 )

[connection signal="area_entered" from="RoomDetector" to="." method="_on_RoomDetector_area_entered"]
[connection signal="area_entered" from="BirdDetector" to="." method="_on_BirdDetector_area_entered"]
